# switch-controller

./: .gitignore  .gitmodules  Action_8h.html  Action_8h__dep__incl.map  Action_8h__dep__incl.md5  Action_8h__incl.map  Action_8h__incl.md5  Action_8h_source.html  ArduinoController_8cpp.html  ArduinoController_8cpp__incl.map  ArduinoController_8cpp__incl.md5  AudioFrameSink_8h.html  AudioFrameSink_8h__dep__incl.map  AudioFrameSink_8h__dep__incl.md5  AudioFrameSink_8h__incl.map  AudioFrameSink_8h__incl.md5  AudioFrameSink_8h_source.html  CMakeLists_8txt.html  Controller_8h.html  Controller_8h__dep__incl.map  Controller_8h__dep__incl.md5  Controller_8h__incl.map  Controller_8h__incl.md5  Controller_8h_source.html  EventToggle_8h.html  EventToggle_8h__dep__incl.map  EventToggle_8h__dep__incl.md5  EventToggle_8h__incl.map  EventToggle_8h__incl.md5  EventToggle_8h_source.html  FFmpegDecoder_8cpp.html  FFmpegDecoder_8cpp__incl.map  FFmpegDecoder_8cpp__incl.md5  FFmpegDecoder_8h.html  FFmpegDecoder_8h__dep__incl.map  FFmpegDecoder_8h__dep__incl.md5  FFmpegDecoder_8h__incl.map  FFmpegDecoder_8h__incl.md5  FFmpegDecoder_8h_source.html  FFmpegFrameSink_8h.html  (+220 more)
c++ loader/: ArduinoLoader.h  ArduinoStructs.h  CMakeLists.txt  Loader.h  config.json  config.txt  main.cpp  test1.txt  test2.txt
ffmpeg-test/: AudioFrameSink.h  CMakeLists.txt  FFmpegDecoder.h  FFmpegRecorder.cpp  FFmpegRecorder.h  FfmpegDecoder.cpp  FfmpegDecoder.h  FfmpegFrameSink.h  FfmpegRecorder.cpp  FfmpegRecorder.h  VideoFrameSink.h  test1.cpp  test2.cpp
windows client/: Arduino.cpp  ArduinoController.cpp  ArduinoLoader.cpp  ArduinoLoader.h  ArduinoStructs.h  CMakeLists.txt  Doxyfile  ImgProc.cpp  ImgProc.h  InputEvent.h  InputEventCollection.h  InputEventInverter.h  InputEventNegator.h  InputEventToggle.h  InputEventTurbo.h  InputManager.cpp  InputManager.h  Loader.h  Macro.cpp  Macro.h  MacroCollection.cpp  MacroCollection.h  MacroImageProcessingDecider.cpp  MacroImageProcessingDecider.h  MacroImageProcessingDeciderCollection.h  MacroInputEventDecider.h  MacroRecorder.h  ReadMe.md  SerialInterface.h  SerialPort.cpp  SerialPort.hpp  SfJoystickInputEvent.h  SfKeyboardInputEvent.h  StartController.cpp  VirtualController.cpp  VirtualController.h  config template.json  config.json  config.txt  pch.h  (+4 more)
windows client/Decider/: Decider.h  DeciderCollection.cpp  DeciderCollection.h  DeciderCollectionBase.h  ImageProcessingDecider.cpp  ImageProcessingDecider.h  ImageProcessingDeciderCollection.cpp  ImageProcessingDeciderCollection.h  InputEventDecider.h  SoundDecider.cpp  SoundDecider.h  SoundDeciderCollection.cpp
windows client/InputEvent/: InputEvent.h  InputEventCollection.cpp  InputEventCollection.h  InputEventInverter.h  InputEventSwitch.h  InputEventToggle.cpp  InputEventToggle.h  InputEventTurbo.h  InputManager.cpp  InputManager.h  SFJoystickAnalogInputEvent.h  SfJoystickDigitalInputEvent.h  SfJoystickInputEvent.h  SfKeyboardInputEvent.h
windows client/Macro/: CharStream.h  Macro.cpp  Macro.h  MacroCollection.cpp  MacroCollection.h  MacroRecorder.h  NByteVector.h
windows client/Utility/: AudioSink.cpp  AudioSink.h  InputManager.cpp  InputManager.h  SerialInterface.h  TimeString.h  WindowsScreenshotUtility.h  fftwPlan.h
windows client/macros/: macro.txt  octopath attack.txt  octopath defend.txt  octopath flee.txt  octopath restore sp.txt  octopath test haanit first.txt  octopath walk.txt  octopath win.txt  test macro.txt
windows client/src/: ArduinoCommunication.java  CreateConfig.cpp  EditConfig.cpp  OpenCVutil.java  RenderPanel.java  SerialInterface.java  StartController.cpp  SwitchController.java  SwitchControllerFunctions.java
windows client/src/Decider/: Decider.h  ImageProcessingDecider.cpp  InputEventDecider.h
windows client/src/InputEvent/: DefaultInputEvent.h  InputEvent.h  InputEventCollection.cpp  InputEventCollection.h  InputEventGenerator.h  InputEventInverter.h  InputEventSwitch.h  InputEventToggle.h  InputEventTurbo.h  SFJoystickAnalogInputEvent.h  SfJoystickDigitalInputEvent.h  SfKeyboardInputEvent.h
windows client/src/Macro/: Macro.h  MacroRecorder.h
windows client/src/Utility/: WindowsScreenshotUtility.h
windows client/test/: CMakeLists.txt  test.cpp
windows-client/: CMakeLists.txt  CMakePresets.json  glob_files.py  list_tests.py  vcpkg.json
windows-client/data/: config.json  example-config.cfg
windows-client/docs/: Doxyfile  ReadMe.md
windows-client/src/: ArduinoController.cpp  CMakeLists.txt  Controller.h  CreateConfig.cpp  EditConfig.cpp  ImageEvent.h  Macro.h  MacroConfig.h  MacroRecorder.h  StartController.cpp  StartController.h  TurboEvent.h  pch.h
windows-client/src/Action/: Action.h  ActionProvider.h  ActionSequence.h  Macro.h
windows-client/src/Decider/: Decider.h  DeciderCollection.cpp  DeciderCollection.h  DeciderCollectionBase.h  ImageProcessingDecider.cpp  ImageProcessingDecider.h  ImageProcessingDeciderCollection.cpp  ImageProcessingDeciderCollection.h  InputEventDecider.h  SoundDecider.cpp  SoundDecider.h  SoundDeciderCollection.cpp  SoundDeciderCollection.h
windows-client/src/ErrorTypes/: ErrorBase.h  FFmpegError.h  SerialError.h
windows-client/src/Event/: Controller.h  Event.h  InputCollection.h
windows-client/src/FFmpeg/: AudioFrameSink.h  FFmpegDecoder.cpp  FFmpegDecoder.h  FFmpegFrameSink.h  FFmpegRecorder.cpp  FFmpegRecorder.h  VideoFrameSink.h
windows-client/src/InputEvent/: ConstantInputEvent.h  DefaultInputEvent.h  InputEvent.h  InputManager.h  (+16 more)
windows-client/test/: ArduinoControllerTest.cpp  CMakeLists.txt
wip/: ArduinoMacro.cpp  ArduinoMacro.h  ArduinoMacros.cpp  ArduinoMacros.h  CMakeLists.txt  CharStream.h  InputEvent.h  InputEventCollection.h  InputEventNegator.h  InputManager.cpp  InputManager.h  Macro.cpp  Macro.h  MacroCollection.cpp  MacroCollection.h  MacroDecider.cpp  MacroDecider.h  MacroImageProcessingDecider.cpp  MacroImageProcessingDecider.h  MacroImageProcessingDeciderCollection.h  Macros.cpp  Macros.h  ScreenshotUtility.h  SerialInterface.h  SfJoystickInputEvent.h  SfKeyboardInputEvent.h  pch.h  test.cpp  test2.txt  test5.json
(+144 files in other folders)
